--- a/home/.vim/dein/conf/filetype.toml
+++ b/home/.vim/dein/conf/filetype.toml
@@ -25,6 +25,10 @@ repo = 'mattn/emmet-vim'
 on_ft = ['html', 'markdown']
 
 [[plugins]]
+repo = 'justmao945/vim-clang'
+on_ft = ['c', 'cpp']
+
+[[plugins]]
 repo = 'tell-k/vim-autopep8'
 on_ft = ['python']
 
