[rust] add vim-racer

--- a/home/.vim/dein/conf/filetype.toml
+++ b/home/.vim/dein/conf/filetype.toml
@@ -40,3 +40,7 @@ on_ft = ['python']
 repo = 'rust-lang/rust.vim'
 on_ft = ['rust']
 hook_add = 'execute "source " . g:dein_base_dir . "/rc/rust.vim"'
+
+[[plugins]]
+repo = 'racer-rust/vim-racer'
+on_ft = ['rust']
