--- a/home/.vim/dein/conf/plugins.toml
+++ b/home/.vim/dein/conf/plugins.toml
@@ -9,6 +9,7 @@ build = 'make'
 [[plugins]]
 repo = 'Shougo/denite.nvim'
 hook_add = 'execute "source " . g:dein_base_dir . "/rc/denite.vim"'
+depends = ['nvim-yarp', 'vim-hug-neovim-rpc']
 
 [[plugins]]
 repo = 'Shougo/neomru.vim'
