--- a/home/.vim/dein/conf/filetype.toml
+++ b/home/.vim/dein/conf/filetype.toml
@@ -28,10 +28,7 @@ on_ft = ['coffee']
 [[plugins]]
 repo = 'mattn/emmet-vim'
 on_ft = ['html', 'markdown']
-
-[[plugins]]
-repo = 'justmao945/vim-clang'
-on_ft = ['c', 'cpp']
+hook_add = 'execute "source " . g:dein_base_dir . "/rc/emmet.vim"'
 
 [[plugins]]
 repo = 'tell-k/vim-autopep8'
